minor fix to display of images on show page - fixes stretching

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -122,9 +122,10 @@ h1 {
   margin: 1rem 3rem;
 }
 
-.show-page-mage {
+.show-page-image {
   max-width: 50%;
-  margin: 1rem 3rem;
+  height: auto;
+  margin: 1rem 3rem auto;
 }
 
 .pizza-star {
